<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_my_lessons"
        android:orderInCategory="101"
        android:title="Delete My Lessons"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

</menu>