<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rcook_logo"
    tools:context=".activity.WelcomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:longClickable="false"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Welcome to the"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/topAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="381dp"
        android:layout_height="400dp"
        android:layout_marginTop="250dp"
        android:background="#B7FFFCF3"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/textTellUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Tell us who you are?"
        android:textColor="@color/textPrimary"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="Enter first name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="#404040"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTellUs" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="Enter last name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="#404040"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <TextView
        android:id="@+id/textRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="What is your role?"
        android:textColor="#404040"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editLastName"
        app:layout_constraintTop_toBottomOf="@+id/editLastName" />

    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editLastName"
        app:layout_constraintStart_toStartOf="@+id/editLastName"
        app:layout_constraintTop_toBottomOf="@+id/textRole" />

    <CheckBox
        android:id="@+id/buttonHealth"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:buttonTint="@color/textPrimary"
        android:text="Click to read the health declaration."
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/spinnerRole"
        app:layout_constraintStart_toStartOf="@+id/spinnerRole"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRole" />

    <TextView
        android:id="@+id/textHealthWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Please note that you cannot continue to use the app without consent from the health declaration."
        android:textColor="@color/colorRed"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/buttonHealth"
        app:layout_constraintStart_toStartOf="@+id/buttonHealth"
        app:layout_constraintTop_toBottomOf="@+id/buttonHealth" />


    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="199dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Continuation"
        android:textAllCaps="false"
        android:textColor="#304749"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/buttonHealth"
        app:layout_constraintStart_toStartOf="@+id/buttonHealth"
        app:layout_constraintTop_toBottomOf="@+id/textHealthWarning" />

    <ImageView
        android:id="@+id/imageLogoCorner"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="Logo"
        android:rotation="20"
        android:src="@drawable/rcook_logo1"
        app:layout_constraintBottom_toBottomOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>