...
            <Button
                android:id="@+id/buttonAgree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="I Agree"
                android:textColor="@color/textPrimary"
                android:backgroundTint="@color/successColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel"
                android:textColor="@color/colorRed"
                android:backgroundTint="@color/errorColor"
                android:textStyle="bold" />
        </LinearLayout>


...
